[package]
name = "chanoma"
version = "0.1.0"
authors = ["booink <booink.work@gmail.com>"]
edition = "2018"

[lib]
name = "chanoma"

[[bin]]
name = "chanoma"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "3.0.0-beta.2"
csv = "1.1"
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.20", features = ["derive"] }
strum_macros = "0.20"
dirs = "3.0"

[dev-dependencies]
env-test-util = "1.0"
