[package]
name = "chanoma"
version = "0.1.1"
authors = ["booink <booink.work@gmail.com>"]
edition = "2021"
description = "chanoma is Characters Normalization library. 文字列正規化処理用のライブラリです。"
license = "MIT"
repository = "https://github.com/booink/chanoma"
keywords = ["nlp", "language", "japanese"]
categories = ["algorithms", "command-line-utilities", "text-processing"]

[lib]
name = "chanoma"

[[bin]]
name = "chanoma"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = { version = "3.1.2", features = ["derive"] }
csv = "1.1"
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
dirs = "4.0"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
env-test-util = "1.0"
criterion = "0.3"

[[bench]]
name = "chanoma"
harness = false
